# parallelki

./: .gitignore
1st_lab/: CMakeLists.txt  README.md  main.cpp
2nd_lab/: CMakeLists.txt
2nd_lab/task1_matrix_vector/: CMakeLists.txt  matrix_vector.c
2nd_lab/task2_integral/: CMakeLists.txt  integrate.c
2nd_lab/task3_slae/: CMakeLists.txt  variant1.cpp  variant2.cpp
3rd_lab/: CMakeLists.txt  run.sh  test.cpp
3rd_lab/1st_task/: CMakeLists.txt  main.cpp
3rd_lab/2nd_task/: main.cpp  server.h
3rd_lab/2nd_task/results/: sin_results.csv  sqrt_results.csv
3rd_lab/results/: pow_results.csv
